[package]
name = "rsheet"
version = "0.1.0"
edition = "2021"

[lib]
name = "rsheet"
path = "src/lib.rs"

[[bin]]
name = "rsheet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
rsheet_lib = "0.1.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
regex = "1.5.4" 